# chatworkpy

./: .gitignore  DESCRIPTION.rst  Pipfile  README.md  main.py  package_release.md  setup.cfg  setup.py
chatworkpy/chatworkpy/chatwork/: contacts.py  rooms.py
pychatwork/pychatwork/chatwork/: contacts.py  rooms.py
pychatwork/utils/chatwork/: chatwork.py  contacts.py  rooms.py
src/: Pipfile  config_sample.yml  main.py
src/chatworkpy/: config.py
src/chatworkpy/chatwork/: contacts.py  rooms.py
utils/chatwork/: Rooms_.py  chatwork.py  contacts.py  rooms.py
