[metadata]
name = chatworkpy
version = 0.0.5
description = chatwork module for python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT # ライセンス名（省略可）
license_file = LICENSE
url = https://github.com/tys-hiroshi/chatworkpy

[options]
package_dir=
    =src
packages=find:
install_requires= # パッケージ自身の依存ライブラリ
        PyYAML~=5.3.1
        requests~=2.24.0

[options.packages.find]
where=src